--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,12 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  /* Hide scroll bar for all browsers */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 body {
